chore: replace Stream.collect(Collectors.toList()) with Stream.toList()